<resources>
    <string name="app_name">Event Search</string>
    <string name="title_activity_result">Search Results</string>
    <string name="main_search_tab_text">SEARCH</string>
    <string name="main_fav_tab_text">FAVORITE</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="form_keyword">Keyword</string>
    <string name="form_category">Category</string>
    <string name="form_distance">Distance</string>
    <string name="form_from">From</string>
    <string name="form_rb_current">Current Location</string>
    <string name="form_rb_other">Other. Specify Location</string>
    <string name="form_error">Please enter mandatory field</string>
    <string name="form_hint_keyword">Enter keyword</string>
    <string name="form_hint_distance">10</string>
    <string name="form_hint_address">Type in the Location</string>
    <string name="fav_no_event_message">No Favorites</string>
    <string name="res_no_event_message">No Record</string>
    <string name="event_searching">Searching Events ...</string>
    <string name="detail_loading">Loading ...</string>
    <string name="toast_add_fav_suffix">&#160;was added to favorites</string>
    <string name="toast_remove_fav_suffix">&#160;was removed from favorites</string>
    <string name="info_teams">Artist/Team(s)</string>
    <string name="info_venue">Venue</string>
    <string name="info_time">Time</string>
    <string name="info_category">Category</string>
    <string name="info_price">Price Range</string>
    <string name="info_ticket_status">Ticket Status</string>
    <string name="info_buy">Buy Ticket At</string>
    <string name="info_seat_map">Seat Map</string>
    <string name="info_buy_value">Ticketmaster</string>
    <string name="info_seat_map_value">View Here</string>
    <string name="venue_name">Name</string>
    <string name="venue_address">Address</string>
    <string name="venue_city">City</string>
    <string name="venue_number">Phone Number</string>
    <string name="venue_hours">Open Hours</string>
    <string name="venue_general_rule">General Rule</string>
    <string name="venue_child_rule">Child Rule</string>
    <string name="artist_name">Name</string>
    <string name="artist_followers">Followers</string>
    <string name="artist_popularity">Popularity</string>
    <string name="artist_spotify">Check At</string>
    <string name="artist_spotify_value">Spotify</string>

    <string-array name="categories">
        <item>All</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Arts &amp; Theatre</item>
        <item>Film</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="units">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
    <string-array name="sort_key">
        <item>Default</item>
        <item>Event Name</item>
        <item>Time</item>
        <item>Artist</item>
        <item>Type</item>
    </string-array>
    <string-array name="sort_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="title_activity_">Activity</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="detail_tab_event">EVENT</string>
    <string name="detail_tab_artist">ARTIST(S)</string>
    <string name="detail_tab_venue">VENUE</string>
    <string name="detail_tab_upcoming">UPCOMING</string>

</resources>
