<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name" >
            </android.support.v7.widget.Toolbar>

            <ImageView
                android:id="@+id/img_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart_fill_white"
                android:layout_gravity="center" />
            <ImageView
                android:id="@+id/img_twitter"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/twitter_ic"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_event" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_artist" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_venue" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_upcoming" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/appbar"
        android:visibility="visible">

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

</RelativeLayout>